# oporch

./: .gitignore  CONTEXT.md  README.md  orchestrator_prd_v2.md  planner.md  pyproject.toml
src/oporch/: cli.py  config.py  constants.py  context_builder.py  decision_ledger.py  doctor.py  event_log.py  executor.py  models.py  orchestrator.py  redact.py  run_state.py  runner.py  state_machine.py  validate.py  work_unit.py
src/oporch/prompts/: planner.md
tests/: test_config.py  test_context_builder.py  test_decision_ledger.py  test_doctor.py  test_event_log.py  test_executor.py  test_orchestrator.py  test_redact.py  test_run_state.py  test_runner.py  test_state_machine.py  test_validate.py  test_work_unit.py
